fixes for build + test on Java 13